--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,10 +18,10 @@ markdown_extensions:
   - toc 
 
 nav:
-  #- SQL - DDL :
-  - 1. Introducció: 31_introducci.md
-  - 2. DDL: 32_ddl.md
-  - Exercicis del tot el tema: exercicis_de_tot_el_tema.md
+  - POSTGRESQL - DDL :
+    - 1. Introducció: 31_introducci.md
+    - 2. DDL: 32_ddl.md
+    - Exercicis del tot el tema: exercicis_de_tot_el_tema.md
   #- Consultes d'actualització:
   #  - 3. Consultes d'actualització: 33_consultes_dactualitzaci.md
   #  
